// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "buffer": {
      "data": [
        42,
        67,
        105,
        148,
        141,
        159,
        187,
        65,
        97,
        205,
        33,
        113,
        96,
        13,
        23,
        174,
        75,
        41,
        115,
        14,
        19,
        46,
        80,
        85,
        148,
        48,
        225,
        87,
        181,
        51,
        199,
        253,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "value": 19112227336007082056285990080286866687625024032128122242375474815680645083219n,
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "value": 1n,
    },
    "y": Fr {
      "value": 2n,
    },
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 2355319993194176804069904598471009258741246787440023559722469801379605292602n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 1233717333477892859600650765516891511845040555558911664207747611330132507140n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 19663987658937807876818770258033821939294996220891521229299433673436340267627n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 17500165303549674225422890851995490194967426690762006625539040305869495515807n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 7815611048792399692737830131820828425699259817172760315817154371517207168964n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 17580526812938050298219583863452646950174595184794225519320952225385600094133n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 21606157465602198984619110395271253564174634250591771321194941036622441004293n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    4,
    129,
    16,
    102,
    127,
    128,
    176,
    47,
    119,
    183,
    215,
    68,
    151,
    102,
    87,
    206,
    169,
    167,
    197,
    241,
    221,
    35,
    64,
    234,
    28,
    87,
    154,
    126,
    191,
    213,
    78,
    85,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    1,
    199,
    180,
    199,
    109,
    76,
    10,
    70,
    45,
    145,
    59,
    63,
    233,
    66,
    229,
    229,
    187,
    194,
    124,
    170,
    205,
    103,
    27,
    143,
    50,
    72,
    213,
    93,
    85,
    212,
    213,
    253,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 1295696570419708335229817991807906338807264444266667696610992213089343847290n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 19346366156627093435977748492330658148910491109188482988431231219937456902699n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 2777104283457738493739673278852193066596804317325510382200290152908916544186n,
}
`;
